<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/txvDolares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dolares"/>
    <EditText
        android:id="@+id/txtDolares"
        android:layout_width="200dp"
        android:layout_below="@+id/txvDolares"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txvEuros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDolares"
        android:text="@string/euros"/>
    <EditText
        android:id="@+id/txtEuros"
        android:layout_width="200dp"
        android:layout_below="@+id/txvEuros"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txvConversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEuros"
        android:text="@string/conversion"/>
    <TextView
        android:id="@+id/txvValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:textSize="18dp"
        android:layout_below="@+id/txvConversion"
        android:layout_alignBaseline="@+id/btnConfigurar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/btnConfigurar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txvConversion"
        android:layout_toRightOf="@+id/txvConversion"
        android:text="@string/contigurar"
        android:textAllCaps="false"/>
    <RadioGroup
        android:id="@+id/rdgBotones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnConfigurar">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Euros a Dolares"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dolares a Euros"/>
    </RadioGroup>
    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rdgBotones"
        android:text="@string/convertir"
        android:textAllCaps="false"/>
</RelativeLayout>